.provarCaches/00D5f000005vwGkEAI/objects/rstk__plmsource__c.object
<CustomObject>
    <description>plmsource__c
This is the staging table for PLM import Sourcing information (from ARENA) #12484</description>
    <fields>
        <fullName>rstk__plmsource_itemId__c</fullName>
        <label>Supplieritem Guid</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__plmsource_plmimport__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PLM Import Session</label>
        <referenceTo>rstk__plmimport__c</referenceTo>
        <relationshipLabel>PLM Import Source Relations Staging</relationshipLabel>
        <relationshipName>plmimports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__plmsource_plmitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PLM Import Item</label>
        <referenceTo>rstk__plmitem__c</referenceTo>
        <relationshipLabel>PLM Import Source Relations Staging</relationshipLabel>
        <relationshipName>plmitems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>PLM Import Source Relation Staging</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PLM Import Source Relations Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>